# TerrariaCloneCpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CopyAssets.cmake  README.md
FontAssetGenerator/: CMakeLists.txt  main.cpp
ShaderCompiler/: CMakeLists.txt  main.cpp
assets/shaders/: background.slang  common.slang  font.slang  light.slang  lightmap.slang  particle.slang  postprocess.slang  tilemap.slang
assets/shaders/d3d11/: background.hlsl  font.hlsl  light.hlsl  lightmap.hlsl  ninepatch.hlsl  particle.hlsl  postprocess.hlsl  sprite.hlsl  tilemap.hlsl  ui_font.hlsl  ui_ninepatch.hlsl  ui_sprite.hlsl
assets/shaders/d3d12/: background.hlsl  font.hlsl  light.hlsl  particle.hlsl  postprocess.hlsl  sprite.hlsl  tilemap.hlsl
assets/shaders/glsl/: sprite.frag  sprite.vert
assets/shaders/hlsl/: sprite.hlsl
assets/shaders/metal/: background.metal  font.metal  light.metal  lightmap.metal  particle.metal  postprocess.metal  sprite.metal  tilemap.metal
assets/shaders/opengl/: background.frag  background.vert  font.frag  font.geom  font.vert  light_blur_horizontal.comp  light_blur_vertical.comp  light_init.comp  lightmap.frag  lightmap.vert  ninepatch.frag  ninepatch.vert  particle.comp  particle.frag  particle.geom  particle.vert  postprocess.frag  postprocess.vert  sprite.frag  sprite.geom  sprite.vert  tilemap.frag  tilemap.geom  tilemap.vert
assets/shaders/vulkan/: background.frag  background.vert  font.frag  font.vert  light_blur_horizontal.comp  light_blur_vertical.comp  light_init.comp  lightmap.frag  lightmap.vert  ninepatch.frag  ninepatch.vert  particle.comp  particle.frag  particle.geom  particle.vert  postprocess.frag  postprocess.vert  sprite.frag  sprite.frag.glsl  sprite.frag.spv  sprite.geom  sprite.vert  sprite.vert.glsl  sprite.vert.spv  tilemap.frag  tilemap.geom  tilemap.vert
font_asset_generator/: main.cpp
include/: assets.hpp  common.h  constants.hpp  game.hpp  input.hpp  log.hpp  optional.hpp  ui.hpp  utils.hpp  vulkan_shader_compiler.hpp
include/math/: math.hpp  quat.hpp  rect.hpp
include/player/: inventory.hpp  player.hpp
include/renderer/: assets.hpp  batch.hpp  camera.h  custom_surface.hpp  defines.h  renderer.hpp  utils.hpp  world_renderer.hpp
include/time/: stopwatch.hpp  time.hpp  timer.hpp
include/types/: anchor.hpp  backend.hpp  block.hpp  item.hpp  sampler.hpp  shader_pipeline.hpp  shader_type.hpp  sprite.hpp  texture.hpp  texture_atlas.hpp  texture_atlas_pos.hpp  texture_descriptor.hpp  tile_pos.hpp  wall.hpp
include/world/: autotile.hpp  chunk.hpp  particles.hpp  world.hpp  world_gen.h
shader_compiler/: CMakeLists.txt  main.cpp
src/: app.cpp  app.hpp  assert.hpp  assets.cpp  assets.hpp  background.cpp  background.hpp  constants.hpp  defines.hpp  engine.hpp  engine.mm  game.cpp  game.hpp  input.cpp  input.hpp  log.hpp  lookup_list.hpp  main.cpp  particles.cpp  particles.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp  vulkan_shader_compiler.cpp  vulkan_shader_compiler.hpp
src/diagnostic/: frametime.cpp  frametime.hpp
src/engine/: assert.hpp  defines.hpp  engine.hpp  engine.mm  input.cpp  input.hpp  log.hpp  utils.cpp  utils.hpp
src/engine/math/: quat.hpp  rect.hpp
src/engine/renderer/: batch.cpp  batch.hpp  camera.cpp  camera.hpp  custom_surface.hpp  custom_surface.mm  macros.hpp  renderer.cpp  renderer.hpp  types.hpp
src/engine/time/: stopwatch.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/engine/types/: anchor.hpp  backend.hpp  font.hpp  glyph.hpp  nine_patch.hpp  order.hpp  render_layer.hpp  rich_text.hpp  sampler.hpp  shader_path.hpp  shader_pipeline.hpp  shader_type.hpp  sprite.hpp  texture.hpp  texture_atlas.hpp  window_settings.hpp
src/math/: constexpr_math.hpp  math.cpp  math.hpp  quat.hpp  rect.hpp
src/player/: inventory.cpp  inventory.hpp  player.cpp  player.hpp
src/renderer/: assets.cpp  assets.hpp  background_renderer.cpp  background_renderer.hpp  batch.hpp  camera.cpp  camera.h  custom_surface.hpp  custom_surface.mm  dynamic_lighting.cpp  dynamic_lighting.hpp  macros.hpp  particle_renderer.cpp  particle_renderer.hpp  renderer.cpp  renderer.hpp  types.hpp  utils.hpp  utils.mm  world_renderer.cpp  world_renderer.hpp
src/state/: base.hpp  common.cpp  common.hpp  ingame.cpp  ingame.hpp  menu.cpp  menu.hpp  testui.cpp  testui.hpp
src/time/: stopwatch.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/types/: anchor.hpp  backend.hpp  background_layer.hpp  block.hpp  collision.hpp  config.hpp  depth.hpp  font.hpp  glyph.hpp  item.cpp  item.hpp  light.hpp  lookup_list.hpp  neighbors.hpp  nine_patch.hpp  order.hpp  render_layer.hpp  rich_text.hpp  sampler.hpp  shader_path.hpp  shader_pipeline.hpp  shader_type.hpp  sprite.hpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  texture_atlas_pos.hpp  tile_pos.hpp  tool_flags.hpp  wall.hpp  window_settings.hpp
src/ui/: arena.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
src/utils/: thread_pool.cpp  thread_pool.hpp
src/world/: autotile.cpp  autotile.hpp  chunk.cpp  chunk.hpp  chunk_manager.hpp  chunk_manger.cpp  dropped_item.cpp  dropped_item.hpp  lightmap.hpp  particles.cpp  particles.hpp  utils.hpp  world.cpp  world.hpp  world_data.cpp  world_data.hpp  world_gen.cpp  world_gen.h
